[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

eframe = "0.29"
egui_plot = "0.29"
rand = "0.8"

windows = { version = "0.46", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }

tray-icon = { version = "0.14", features = ["serde"] }
image = "0.24"